--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=arma_infinitum
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.37.2+1.17
+clothconfig_version=5.0.38
